--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="div nav_menu" id="nav-menu">
                 <ul class="nav_list">
                     <li>
-                        <a href="#home" class="nav_link">Hmoe</a>
+                        <a href="#home" class="nav_link">Home</a>
                     </li>
                     <li>
                         <a href="#work" class="nav_link">Work</a>
